<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/linearLayout_sign_up_button">

        <Button
            android:layout_width="@dimen/button_registration_width"
            android:layout_height="wrap_content"
            android:text="@string/action_group_sign_up"
            android:id="@+id/sign_up_menu_group_reg_button"
            android:textStyle="bold"/>

        <Button
            android:layout_width="@dimen/button_registration_width"
            android:layout_height="wrap_content"
            android:text="@string/action_join_group"
            android:id="@+id/sign_up_menu_member_reg_button"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout_sign_up_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/text_top_margin"
        android:id="@+id/linearLayout_sign_up_logo"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_my_location_white"
            android:layout_margin="@dimen/icon_margin"
            android:contentDescription="@string/image_description"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo_message"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_message_sign_up_header"
        android:layout_marginBottom="@dimen/text_top_margin"
        android:layout_above="@+id/linearLayout_sign_up_logo"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_top_margin"
        android:text="@string/prompt_message_sign_up_footer_1"
        android:id="@+id/sign_up_menu_message_group_textView"
        android:textStyle="bold"
        android:layout_below="@+id/linearLayout_sign_up_button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_message_sign_up_footer_2"
        android:id="@+id/sign_up_menu_message_invite_textView"
        android:textStyle="bold"
        android:layout_below="@+id/sign_up_menu_message_group_textView"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_message_sign_up_footer_3"
        android:textStyle="bold"
        android:layout_below="@+id/sign_up_menu_message_invite_textView"
        android:layout_centerHorizontal="true" />
</RelativeLayout>