<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.faqih.md.locate.InvitationScanActivity">

    <SurfaceView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/invitation_scan_surface_view"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_message_invitation_scan"
        android:id="@+id/invitation_scan_messange_textView"
        android:layout_below="@+id/invitation_scan_surface_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/text_top_margin"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/logo_button_margin"
        android:layout_above="@+id/invitation_scan_surface_view"
        android:id="@+id/linearLayout3">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_my_location_white"
            android:layout_margin="@dimen/icon_margin"
            android:contentDescription="@string/image_description" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo_message"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
